# py-janaf

./: .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml  tox.ini  tox.toml  zensical.toml
.github/: dependabot.yml
.github/workflows/: docs.yml  publish.yml  test.yml  tests.yml  zizmor.yml
docs/: api.md
docs/stylesheets/: extra.css
example/: interp.py  to_xarray.py  water.py
janaf/: __init__.py  index.py  janaf.json  table.py
janaf/data/: Al-002.txt  Al-003.txt  Al-004.txt  Al-010.txt  Al-011.txt  Al-025.txt  Al-026.txt  Al-041.txt  Al-042.txt  Al-049.txt  Al-050.txt  Al-052.txt  Al-053.txt  Al-054.txt  Al-064.txt  Al-065.txt  Al-068.txt  Al-069.txt  Al-081.txt  Al-082.txt  Al-089.txt  Al-090.txt  Al-096.txt  Al-100.txt  Al-106.txt  Al-107.txt  Al-109.txt  Al-110.txt  B-002.txt  B-003.txt  B-004.txt  B-041.txt  B-042.txt  B-064.txt  B-065.txt  B-068.txt  B-069.txt  B-074.txt  B-075.txt  B-095.txt  (+417 more)
script/: fix_data.py  update_data.py  update_json.py
scripts/: README.md  fix_data.py  update_data.py  update_json.py
src/janaf/: __init__.py  _constant.py  index.py  table.py
src/janaf/data/: Al-001.txt  Al-002.txt  Al-003.txt  Al-004.txt  Al-005.txt  Al-006.txt  Al-007.txt  Al-008.txt  Al-009.txt  Al-010.txt  Al-011.txt  Al-012.txt  Al-013.txt  Al-014.txt  Al-015.txt  Al-016.txt  Al-017.txt  Al-018.txt  Al-020.txt  Al-021.txt  Al-022.txt  Al-023.txt  Al-024.txt  Al-025.txt  Al-026.txt  Al-027.txt  Al-028.txt  Al-033.txt  Al-034.txt  Al-035.txt  Al-036.txt  Al-037.txt  Al-038.txt  Al-039.txt  Al-040.txt  Al-041.txt  Al-042.txt  Al-043.txt  Al-044.txt  Al-045.txt  (+1574 more)
tests/: test_example.py  test_index.py  test_interp.py  test_runall.py  test_table.py  test_to_xarray.py
