[project]
dynamic = ["version"]
name = "janaf"
description = "Python wrapper for NIST-JANAF Thermochemical Tables"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Takumasa Nakamura", email = "n.takumasa@gmail.com" },
]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
]
urls.Repository = "https://github.com/n-takumasa/py-janaf"

dependencies = [
  "polars>=1.0.0",
  "importlib_resources>=5.0; python_version < '3.9'",
]

[project.optional-dependencies]
xarray = [
  "xarray>=2023.1.0",
]
all = ["janaf[xarray]"]

[dependency-groups]
optional = [
  # "janaf[all]",
  "xarray>=2023.1.0",
]
dev = [
  { include-group = "optional" },
  "tox>=4.22",
  "tox-uv",
  { include-group = "docs" },
  { include-group = "lint" },
  { include-group = "script" },
  { include-group = "test" },
  { include-group = "type_ty" },
]
lint = ["ruff"]
script = ["aiofiles", "aiohttp"]
docs = [
  "mkdocstrings-python>=1.11.1",
  "zensical>=0.0.21",
]
test-base = [
  "pytest>=8",
  "pytest-cov",
  "pytest-github-actions-annotate-failures",
]
test = [
  { include-group = "optional" },
  "matplotlib",
  "pint-xarray",
  { include-group = "test-base" },
]
test-min = [
  { include-group = "test-base" },
]
type_ty = [
  "ty>=0.0.2",
  "importlib_resources>=5.0",
  { include-group = "script" },
  { include-group = "test" },
]
type_mypy = [
  "mypy[install-types]",
  { include-group = "script" },
  { include-group = "test" },
]

[tool.uv.dependency-groups]
docs = { requires-python = ">=3.13" }

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/janaf/_version.py"
build.targets.sdist.exclude = [
  "/.github",
  "scripts/",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests", "src", "README.md"]
log_cli_level = "INFO"
xfail_strict = true
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
  "-p", "no:faulthandler",  # TODO: pola-rs/polars#23142
  "--doctest-modules",
  "--doctest-glob", "*.md",
]
filterwarnings = ["error"]

[tool.coverage]
run.source_pkgs = ["janaf", "tests"]
run.branch = true
run.parallel = true
report.exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@overload",
]

[tool.ruff]
line-length = 88
lint.extend-select = [
  "B",  # flake8-bugbear
  "I",  # isort
  "UP",  # pyupgrade
]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
files = "src,scripts,example"
strict = true
warn_unreachable = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

[tool.tox]
requires = [
    "tox>=4.21",
    "tox-uv",
]
env_list = [
    "lint", "type_ty", "type_mypy", "min",
    "3.14", "3.13", "3.12", "3.11", "3.10", "3.9", "3.8",
]

[tool.tox.gh.python]
"3.14" = ["3.14"]
"3.13" = ["3.13", "lint", "type_ty", "type_mypy", "min"]
"3.12" = ["3.12"]
"3.11" = ["3.11"]
"3.10" = ["3.10"]
"3.9" = ["3.9"]
"3.8" = ["3.8"]

[tool.tox.env_run_base]
package = "wheel"
wheel_build_env = ".pkg"
dependency_groups = ["test"]
commands = [
    ["pytest", { replace = "posargs", default = [], extend = true }],
]
pass_env = [
  "GITHUB_ACTIONS",
]

[tool.tox.env.docs]
dependency_groups = ["docs"]
commands = [
  ["zensical", { replace = "posargs", default = ["build", "--clean"], extend = true }],
]

[tool.tox.env.min]
dependency_groups = ["test-min"]
set_env = { ALLOW_MISSING_DEPS = "1" }

[tool.tox.env.lint]
package = "skip"
deps = [
    "ruff",
]
commands = [
    ["ruff", "format", "--check", { replace = "posargs", default = [], extend = true }],
    ["ruff", "check", "--no-fix", { replace = "posargs", default = [], extend = true }],
]
pass_env = [
    "RUFF_OUTPUT_FORMAT",
]

[tool.tox.env.type_ty]
package = "wheel"
dependency_groups = ["type_ty"]
commands = [
    ["ty", "check", { replace = "posargs", default = [], extend = true }],
]

[tool.tox.env.type_mypy]
package = "wheel"
dependency_groups = ["type_mypy"]
commands = [
    ["mypy", "--install-types", "--non-interactive", { replace = "posargs", default = [], extend = true }],
]
